# ffmpegwithpy-rust

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/: dependabot.yml
.github/workflows/: CI.yml  test.yml
python/ffmpegwithpy/: __init__.py  ffmpegwithpy.pyi
src/: lib.rs
tests/: test_command.py
