[package]
name = "ffmpegwithpy"
version = "0.1.0"
license = "MIT"
authors = ["My <84212641+My-MC@users.noreply.github.com>"]
edition = "2021"
homepage = "https://github.com/My-MC/ffmpegwithpy-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ffmpegwithpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.1", features = ["extension-module", "abi3-py37"] }

[package.metadata.maturin]
python-source = "python"
